--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-transition-group": "^4.4.5",
+    "simplebar-react": "^3.2.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
